# server/routes.js
@@ -3,15 +3,20 @@ import user from "./api/v1/controllers/user/routes";
 import admin from "./api/v1/controllers/Admin/routes";
 
 import tutorial from "./api/v1/controllers/TutorialVideo/routes";
-import tutorialVideo from "./api/v1/controllers/tutorialVideoByCatgory/routes";
+import tutorialVideoByCategory from "./api/v1/controllers/tutorialVideoByCatgory/routes";
 import flashCards from "./api/v1/controllers/flashCards/routes";
 
 import forum from "./api/v1/controllers/ForumAndSocial_Clubs/routes";
+import club from "./api/v1/controllers/ForumAndSocial_Clubs/routes";
 import statics from "./api/v1/controllers/faq/routes";
 import faq from "./api/v1/controllers/faq/routes";
 import blog from "./api/v1/controllers/Blog/routes";
 import medBound from "./api/v1/controllers/MedBoundCMS/routes";
 import medBoundTimes from "./api/v1/controllers/MedBoundTimes/routes";
+import subAdmin from "./api/v1/controllers/SubAdmin/routes";
+import helpCenterQuestion from "./api/v1/controllers/helpCenterQuestion/router";
+import helpCenterQuerie from "./api/v1/controllers/helpCenterQuerie/router";
+
 
 
 
@@ -32,6 +37,7 @@ export default function routes(app) {
   app.use('/api/v1/admin', admin);
 
   app.use('/api/v1/tutorialVideo', tutorial);
+  app.use('/api/v1/tutorialVideoByCategory', tutorialVideoByCategory);
   app.use('/api/v1/flashCard', flashCards);
 
   app.use('/api/v1/forum', forum);
@@ -40,6 +46,9 @@ export default function routes(app) {
   app.use("/api/v1/blog", blog);
   app.use("/api/v1/medBoundCms", medBound);
   app.use("/api/v1/medBoundTimes", medBoundTimes);
+  app.use("/api/v1/subAdmin", subAdmin);
+  app.use("/api/v1/helpCenterQuestion", helpCenterQuestion);
+  app.use("/api/v1/helpCenterQuery", helpCenterQuerie);
 
   
 
